# near-light-client-rs

./: .gitignore  Cargo.toml  README.md
light-client-app-sample/: Cargo.toml  README.md  light-client-app-sample.toml
light-client-app-sample/src/: application.rs  commands.rs  config.rs  lib.rs  light_client.rs  utils.rs
light-client-app-sample/src/commands/: start.rs  validate.rs  validate_state.rs  validate_tx.rs  verify_membership.rs  verify_non_membership.rs  verify_transaction.rs  view_bps.rs  view_head.rs
light-client-app-sample/src/light_client/: near_rpc_client_wrapper.rs  utils.rs
near-light-client/: Cargo.toml
near-light-client/src/: lib.rs  types.rs
near-light-client/src/near_types/: hash.rs  merkle.rs  mod.rs  signature.rs  transaction.rs  trie.rs
near-light-client/src/near_types/trie/: nibble_slice.rs
