[package]
name = "light_client_app_sample"
authors = ["Rivers Yang <rivers@oct.network>"]
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.20"
bs58 = { workspace = true }
clap = "4"
chrono = "0.4"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"

anyhow = "1.0"
borsh = { workspace = true }
near-crypto = { workspace = true }
near-jsonrpc-client = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-primitives = { workspace = true }

abscissa_tokio = "0.7.0"
tokio = { version = "1.0", features = ["full"] }
tokio-retry = "0.3.0"
tracing = "0.1"

near-light-client = { path = "../near-light-client" }

[dependencies.abscissa_core]
version = "0.7.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
once_cell = "1.2"
