[package]
name = "near-light-client"
authors = ["Rivers Yang <rivers@oct.network>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9"
bs58 = "0.4"
byteorder = "1.4"
ed25519-dalek = "1"
elastic-array = {version = "0.11", default-features = false }
sha2 = "0.10"
