[package]
name = "near-light-client"
authors = ["Rivers Yang <rivers@oct.network>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true }
bs58 = { workspace = true }
byteorder = { workspace = true }
ed25519-dalek = { workspace = true }
elastic-array = { workspace = true }
sha256 = { workspace = true }
hex = { workspace = true }
